--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -3,3 +3,37 @@ body {
     color: lime;
     background-color: black;
 }
+
+.models-list-container {
+    display: flex;
+    justify-content: center;
+}
+
+.models-list {
+    padding: 1em;
+}
+
+a:link, a:visited {
+    color: lime;
+}
+
+a:hover {
+    color: limegreen;
+}
+
+pre {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+.container {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.container > h1 {
+    text-align: center;
+}
